Updated De translations

--- a/webapp/src/translations/languages/de.json
+++ b/webapp/src/translations/languages/de.json
@@ -99,7 +99,7 @@
       "title": "Hilfe – DeFiChain Client",
       "help": "Helfen",
       "section": "Abschnitt",
-      "helpPageHeader": "Connect with the community with these options:",
+      "helpPageHeader": "Verbinde dich mit der Community über diese Optionen:",
       "telegramEn": "Telegram Community (EN)",
       "telegramEnLink": "t.me/defiblockchain",
       "telegramDe": "Telegram Community (DE)",
@@ -190,7 +190,7 @@
       "liquidityPage": {
         "title": "Liquidity – DeFiChain Client",
         "yourLiquidity": "Your liquidity",
-        "yourLiquidityInfo": "Du kannst jetzt die Liquidity minen für potentiell hohe Erträge nutzen.Wähle unten ein Pool-Paar aus, stelle Liquidität bereit, um den DEX (Dezentralisierte Börse) mit Energie zu versorgen, damit du anfangen kannst, Gebühren und jährliche Erträge zu verdienen. Du kannst jederzeit ausbezahlen.",
+        "yourLiquidityInfo": "Du kannst jetzt die Liquidity minen für potentiell hohe Erträge nutzen. Wähle unten ein Pool-Paar aus, stelle Liquidität bereit, um den DEX (Dezentralisierte Börse) mit Energie zu versorgen, damit du anfangen kannst, Gebühren und jährliche Erträge zu verdienen. Du kannst jederzeit ausbezahlen.",
         "noLiquidity": "Keine Liquidität gefunden. Möchtest du dem Pool Liquidität zuführen?",
         "loading": "Laden…",
         "watchVideo": "Video ansehen",
@@ -201,8 +201,8 @@
         "liquidityPools": "Liquidity pools",
         "volume": "Volumen",
         "apy": "APY",
-        "back": "BACK",
-        "addLiquidity": "Liquidity hinzufügen",
+        "back": "ZURÜCK",
+        "addLiquidity": "Liquidität hinzufügen",
         "txHash": "Transaction Hash"
       },
       "liquidityInfo": {
@@ -263,12 +263,12 @@
         "nonCustodialInfo": "Dein Geld bleibt in deiner Wallet und geht niemals durch einen zentralisierte Exchange.",
         "decentralizedInterface": "Dezentralisierte Schnittstelle",
         "decentralizedInterfaceInfo": "Du kannst direkt mit der Blockchain aus deiner App Transaktionen durchführen, ohne jemals einen Server zu gebrauchen.",
-        "poweredLiquidityPools": "Powered by Liquidity Pools",
+        "poweredLiquidityPools": "Powered by liquidity pools",
         "poweredLiquidityPoolsInfo": "Swaps werden über automatisierte Liquiditätspools abgewickelt, nicht über zentralisierte Auftragsbücher.",
         "swaping": "Swapping",
         "amountInsufficient": "Unzureichender Betrag auf deinem Konto",
-        "txHash": "Transaction Hash",
-        "somethingWentWrong": "Something went wrong"
+        "txHash": "Transaktions Hash",
+        "somethingWentWrong": "Etwas ist schief gelaufen"
       },
       "swapTab": { "from": "Von", "to": "An" },
       "poolTab": {
@@ -281,13 +281,13 @@
         "apy": "APY",
         "apyTooltipMessage": "Der hier angegebene APY beinhaltet nur DFI-Incentives, ohne Provision. Tatsächliches APY mit Provision ist also, mehr.",
         "totalLiquidity": "Gesamtliquidität (USD)",
-        "addLiquidity": "LIQUIDITY HINZUFÜGEN"
+        "addLiquidity": "LIQUIDITÄT HINZUFÜGEN"
       },
       "addLiquidity": {
         "balance": "Kontostand",
         "max": "Max",
         "selectToken": "Token auswählen",
-        "addLiquidity": "Liquidity hinzufügen",
+        "addLiquidity": "Liquidität hinzufügen",
         "UTXOPrepared": "UTXO vorbereitet",
         "preparingUTXO": "UTXO vorbereiten",
         "addingLiquidity": "Liquidität wird hinzugefügt",
@@ -297,10 +297,10 @@
         "input": "Eingabe",
         "price": "Preis",
         "shareOfPool": "Pool Anteil",
-        "readyToSupply": "Ready to supply",
+        "readyToSupply": "Bereit zu Supply",
         "verifyTransactionSupply": "Bitte bestätige die Transaktion und drücke SUPPLY",
         "reward": "Belohnung",
-        "deposits": "Deposits",
+        "deposits": "Einzahlungen",
         "rates": "Raten",
         "continue": "Weiter",
         "cancel": "Abbrechen",
@@ -315,7 +315,7 @@
         "address": "Adresse",
         "label": "Label",
         "selected": "Ausgewählt",
-        "removeLiquidity": "Liquidity entfernen",
+        "removeLiquidity": "Liquidität entfernen",
         "enterRemoveLiquidityAmount": "Zu entfernende Menge an Liquidity eingeben",
         "verifyTransaction": "Bitte bestätige deine Transaktion und drücke BESTÄTIGEN",
         "removeLiquidityAmount": "Menge der zu entfernenden Liquidity",
@@ -331,13 +331,13 @@
         "back": "ZURÜCK",
         "continue": "WEITER",
         "confirm": "Bestätigen",
-        "backToPool": "Back to pool",
-        "refreshingUTXOS": "Refreshing UTXOS",
-        "UTXOSRefreshed": "UTXOS refreshed",
-        "removingLiquidity": "Removing liquidity",
-        "liquidityRemoved": "Liquidity removed",
-        "transferringTokens": "Transferring tokens",
-        "tokensTransferred": "Tokens transferred",
+        "backToPool": "Zurück zum Pool",
+        "refreshingUTXOS": "Aktualisiere UTXOS",
+        "UTXOSRefreshed": "UTXOS Aktualisiert",
+        "removingLiquidity": "Entfernen von Liquidität",
+        "liquidityRemoved": "Liquidität entfernt",
+        "transferringTokens": "Übertragen von Tokens",
+        "tokensTransferred": "Übertragene Tokens",
         "receiveAddress": "Empfänger Adresse"
       }
     },
@@ -356,20 +356,20 @@
           "price": "Preis",
           "volume": "Volumen (24STD)",
           "marketCap": "Market Cap",
-          "holders": "Holders",
-          "decimal": "Decimal",
+          "holders": "Halter",
+          "decimal": "Dezimal",
           "limit": "Limit",
           "mintingSupport": "Minting support",
-          "tradeable": "Tradeable"
+          "tradeable": "Handelbar"
         },
         "dctLabels": {
           "id": "ID",
           "totalInitialSupply": "Total initial supply",
-          "finalSupplyLimit": "Final supply limit",
+          "finalSupplyLimit": "Endgültiges Supply Limit",
           "mintingSupport": "Minting support",
           "tradeable": "Tradeable",
           "type": "Typ",
-          "decimal": "Decimal",
+          "decimal": "Dezimal",
           "limit": "Limit"
         }
       },
@@ -386,12 +386,12 @@
         "updateTitle": "Update DCT (DeFi Custom Token)",
         "name": "Token Name",
         "symbol": "Ticker Symbol",
-        "decimal": "Decimal",
+        "decimal": "Dezimal",
         "decimalText": "Anzahl der Dezimalstellen. Kann nach der Einstellung nicht mehr geändert werden.",
         "limit": "Limit",
         "mintingSupport": "Minting support?",
         "mintText": "Du kannst Tokens prägen, nachdem sie erstellt worden sind.",
-        "optionalFinalSupplyLimit": "Final supply limit (optional)",
+        "optionalFinalSupplyLimit": "Endgültiges Supply Limit (optional)",
         "optionalFinalSupplyLimitText": "Unveränderliche Gesamtsupply. Für unbegrenzten Supply frei lassen. Kann nach der Festlegung nicht mehr geändert werden.",
         "tradeable": "Handelbar?",
         "dfiRequired": "DFI notwendig",
@@ -413,16 +413,16 @@
         "type": "Typ",
         "price": "Preis",
         "id": "ID",
-        "decimals": "Decimals",
-        "holders": "Holders",
+        "decimals": "Dezimalstellen",
+        "holders": "Halter",
         "limit": "Limit",
         "minitingSupport": "Minting Support",
         "tradeable": "Handelbar?",
         "marketCap": "Market Cap",
         "volume": "Volumen (24STD)",
         "officialSite": "Offizielle Seite",
-        "transfers": "Transfers",
-        "info": "Info",
+        "transfers": "Überweisungen",
+        "info": "Infos",
         "exchange": "Exchange",
         "dex": "DEX",
         "readContract": "Vertrag lesen",
@@ -447,7 +447,7 @@
         "cancel": "abbrechen",
         "continue": "weiter",
         "pleaseVerifyAmount": "Bitte bestätige die Anzahl",
-        "completeMint": "Complete Mint",
+        "completeMint": "Vollständige Mint",
         "transactionSuccessMsg": "Die Transaktion war ein Erfolg. Dein Token-Saldo wird aktualisiert, sobald die Transaktion von der DeFiChain bestätigt wurde.",
         "backToToken": "Zurück zu Token"
       },
