update de.json with addliquidity value

--- a/webapp/src/translations/languages/de.json
+++ b/webapp/src/translations/languages/de.json
@@ -311,8 +311,8 @@
         "backToPool": "Back to pool",
         "totalPooled": "Total pooled",
         "amountInsufficient": "Insufficient Amount in your account",
-        "ratioMoreThan1": "Ratio has moved more than 1%. Please check your entry amounts and re-enter",
-        "ratioChanged": "Ratio has been changed. Please check your entry amounts and re-enter"
+        "ratioMoreThan1": "Das Verhältnis hat sich um mehr als 1% bewegt. Bitte überprüfe deine Eingabebeträge und aktualisiere die Beträge",
+        "ratioChanged": "Das Verhältnis wurde geändert. Bitte überprüfe deine Eingabebeträge und aktualisiere die Beträge"
       },
       "removeLiquidity": {
         "address": "Adresse",
